<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Enter an image search query...</string>
    <string name="search">Search</string>
    <string name="thumbnail_image">Thumbnail Image</string>
    <string name="title_activity_full_image_view">FullImageViewActivity</string>
    <string name="title_activity_search_filter">SearchFilterActivity</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="image_type">Image Type</string>
    <string name="color_filter">Color Filter</string>
    <string name="site_filter">Site Filter</string>
    <string name="save">Save</string>
    <string name="some_site_dot_com">somesite.com</string>
    <string name="select_size_prompt">select a size</string>
    <string name="select_color_prompt">select a color</string>
    <string name="select_type_prompt">select a type</string>
    <string name="any">any</string>
    <string name="file_type">File Type</string>

</resources>
