<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.purplemovies.googleimagesearch.activities.SearchFilterActivity">
    
    <TableLayout android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        >
        <TableRow>
            <TextView android:id="@+id/size_text_view"
                style="@style/settings_text"
                android:text="@string/size" />

            <Spinner android:id="@+id/size_spinner"
                style="@style/settings_text"
                android:gravity="fill_horizontal"
                android:entries="@array/sizes_array"
                android:prompt="@string/select_size_prompt" />
        </TableRow>
        <TableRow>
            <TextView android:id="@+id/color_text_view"
                style="@style/settings_text"
                android:text="@string/color_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner android:id="@+id/color_spinner"
                style="@style/settings_text"
                android:entries="@array/colors_array"
                android:prompt="@string/select_color_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView android:id="@+id/image_type_text_view"
                style="@style/settings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_type"
                />

            <Spinner android:id="@+id/image_type_spinner"
                style="@style/settings_text"
                android:entries="@array/image_types_array"
                android:prompt="@string/select_type_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/file_type_text"
                style="@style/settings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_type" />
            
            <Spinner android:id="@+id/file_type_spinner"
                style="@style/settings_text"
                android:entries="@array/file_types_array"
                android:prompt="@string/select_type_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView android:id="@+id/site_text_view"
                style="@style/settings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/site_filter" />

            <EditText android:id="@+id/site_filter_edit_text"
                style="@style/settings_text"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/some_site_dot_com"
                android:inputType="textWebEmailAddress" />
        </TableRow>
    </TableLayout>

    <Button android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
